[package]
name = "FreeSync"
version = "0.1.0"
edition = "2024"

[dependencies]
merkle = { path = "src/merkle" }
url = "2.5.8"

[workspace]
members = [
    "src/merkle",
    "src/server",
    "src/logger",
]
[profile.release]
opt-level = 3
debug = false
split-debuginfo = '...'
strip = "none"
debug-assertions = false
overflow-checks = false
lto = true
panic = 'abort'
incremental = false
codegen-units = 16
rpath = false
