[package]
name = "FreeSync"
version = "0.1.0"
edition = "2024"

[dependencies]
merkle = { path = "src/merkle" }
threadpool = {path = "src/threadpool"}
ptui = {path = "src/ptui"}
url = "2.5.8"

[workspace]
members = [
    "src/merkle",
    "src/server",
    "src/logger", "src/threadpool", "src/ptui",
]

