[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
logger = {path = "../logger"}
merkle = {path = "../merkle"}
server_internals = {path = "./src/server_internals"}

[profile.release]
opt-level = 3
debug = false
split-debuginfo = '...'
strip = "none"
debug-assertions = false
overflow-checks = false
lto = true
panic = 'unwind'
incremental = false
codegen-units = 16
rpath = false
